--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ctools"]
 	path = lib/ctools
 	url = https://github.com/simsong/ctools.git
+[submodule "s3-bucket-listing"]
+	path = s3-bucket-listing
+	url = https://github.com/simsong/s3-bucket-listing
